--- a/src/sass/pages/_projects.scss
+++ b/src/sass/pages/_projects.scss
@@ -7,15 +7,13 @@
 		width: 100%;
 
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(38rem, 1fr));
+		grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
 		gap: 5rem;
 	}
 }
 
 .project {
 	position: relative;
-	height: 55rem;
-	max-width: 42rem;
 	padding: 3rem;
 	border-radius: 1rem;
 
@@ -87,12 +85,12 @@
 	}
 
 	&__description {
-		font-size: 1.8rem;
 		margin-bottom: auto;
 	}
 
 	&__buttons {
 		width: 100%;
+		margin-top: 2rem;
 
 		display: flex;
 		justify-content: space-between;
@@ -109,7 +107,7 @@
 		align-items: center;
 
 		color: var(--color-grey-light-1);
-		font-size: 1.4rem;
+		font-size: 1.8rem;
 		font-weight: bold;
 		text-decoration: none;
 		transition: background-color 0.2s ease-in-out;
